--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -1,3 +1,8 @@
+body {
+  margin: 0;
+  padding: 0;
+}
+
 a {
   color: inherit; /* blue colors for links too */
   text-decoration: inherit; /* no underline */
