--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -1,37 +1,38 @@
 body {
-  margin: 0;
-  padding: 0;
+	margin: 0;
+	padding: 0;
 }
 
 a {
-  color: inherit; /* blue colors for links too */
-  text-decoration: inherit; /* no underline */
+	color: inherit; /* blue colors for links too */
+	text-decoration: inherit; /* no underline */
 }
 
-header{
-  background-color:rgba(255, 99, 132, 0.5) ;
-  font-family: Arial, Helvetica, sans-serif;
-  display: flex;
-  justify-content: space-between;
-  #website-name {
-    color: white;
-    margin-left: 20px;
-   }
-   nav{
-    display: flex;
-    align-items:center;
-    font-family: Arial, Helvetica, sans-serif;
-    cursor: pointer;
-    span{
-      margin-left: 5px;
-      margin-right: 20px;
-      color: white;
-      font-weight: bold;
-     
-    }
-   }
-  
+header {
+	background-color: rgba(255, 99, 132, 0.5);
+	font-family: Arial, Helvetica, sans-serif;
+	display: flex;
+	justify-content: space-between;
+	#website-name {
+		color: white;
+		margin-left: 20px;
+	}
+	nav {
+		display: flex;
+		align-items: center;
+		font-family: Arial, Helvetica, sans-serif;
+		cursor: pointer;
+		span {
+			margin-left: 5px;
+			margin-right: 20px;
+			color: white;
+			font-weight: bold;
+		}
+	}
 }
-#main-page{
-  opacity: 0.6;
+#main-page {
+	opacity: 0.6;
+}
+#history {
+	opacity: 0.6;
 }
